2009-08-13  Steve Block  <steveblock@google.com>

        Reviewed by Darin Adler.

        Fixes a couple of bugs in SecurityOrigin::createFromDatabaseIdentifier.
        https://bugs.webkit.org/show_bug.cgi?id=28262

        No new tests possible.

        * page/SecurityOrigin.cpp:
        (WebCore::SecurityOrigin::createFromDatabaseIdentifier):

2009-08-13  Dirk Schulze  <krit@webkit.org>

        Reviewed by Eric Seidel.

        [CAIRO] getImageData fails on a given rect bigger than the image rect

        The destination image and the source image was mixed up on creating the
        imageData.

        This is just a clean up and doesn't affect the current behavior. It's not
        possible to test this failure in a LayoutTest. Only canvas uses getImageData
        at the moment and returns before calling getImageData, if the image rect does
        not contain the requested rect.

        * platform/graphics/cairo/ImageBufferCairo.cpp:
        (WebCore::getImageData):

2009-08-13  Maxime Simon  <simon.maxime@gmail.com>

        Reviewed by Eric Seidel.

        [Haiku] Adding RenderTheme to WebCore.
        https://bugs.webkit.org/show_bug.cgi?id=28258

        * platform/haiku/RenderThemeHaiku.cpp: Added.
        (WebCore::RenderThemeHaiku::create):
        (WebCore::RenderTheme::themeForPage):
        (WebCore::RenderThemeHaiku::RenderThemeHaiku):
        (WebCore::RenderThemeHaiku::~RenderThemeHaiku):
        (WebCore::supportsFocus):
        (WebCore::RenderThemeHaiku::supportsFocusRing):
        (WebCore::RenderThemeHaiku::platformActiveSelectionBackgroundColor):
        (WebCore::RenderThemeHaiku::platformInactiveSelectionBackgroundColor):
        (WebCore::RenderThemeHaiku::platformActiveSelectionForegroundColor):
        (WebCore::RenderThemeHaiku::platformInactiveSelectionForegroundColor):
        (WebCore::RenderThemeHaiku::platformTextSearchHighlightColor):
        (WebCore::RenderThemeHaiku::systemFont):