@@ -175,8 +175,7 @@ void WMLDoElement::registerTask(WMLTaskElement* task)
 
 void WMLDoElement::deregisterTask(WMLTaskElement* task)
 {
-    ASSERT(m_task == task);
-    UNUSED_PARAM(task);
+    ASSERT_UNUSED(task, m_task == task);
     m_task = 0;
 }
 
